<resources>
    <string name="app_name">JavHub</string>
    <string name="category">Genre: </string>
    <string name="actors">Actors: </string>
    <string name="desc">Plot: </string>
    <string name="productId">ProductId: </string>
    <string name="address">Play Urls</string>
    <string name="download">Download Movies</string>
    <string name="my_fav">My Favorite</string>
    <string name="my_upload">My Upload</string>
    <string name="my_download">My Download</string>
    <string name="account">yugimaster</string>

    <!-- drawerlayout -->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="github">https://github.com/yugimaster</string>
</resources>
